tree-sitter-outrun/grammar.js
    source_file: $ => repeat($.item),

    // Top-level items
    item: $ => choice(
      $.struct_definition,
      $.trait_definition,
      $.impl_block,
      $.function_definition,
      $.constant_definition,
      $.let_binding,
      $.alias_definition,
      $.macro_definition,
      $.import_definition
    ),

    // Comments
    comment: $ => token(prec(-1, seq('#', /.*/))),
    block_comment: $ => token(seq('###', /.*?/, '###')),

    // Struct Definition
    struct_definition: $ => seq(
      repeat($.attribute),
      'struct',
      $.type_identifier,
      optional($.generic_params),
      '(',
      optional($.struct_fields),
      ')',
      optional($.trait_constraints),
      '{',
      repeat($.function_definition),
      '}'
    ),

    struct_fields: $ => seq(
      $.struct_field,
      repeat(seq(',', $.struct_field)),
      optional(',')
    ),

    struct_field: $ => seq(
      $.identifier,
      ':',
      $.type_annotation
    ),

    // Trait Definition
    trait_definition: $ => seq(
      repeat($.attribute),
      'trait',
      $.type_identifier,
      optional($.generic_params),
      optional($.trait_constraints),
      '{',
      repeat($.trait_function),
      '}'
    ),

    trait_function: $ => choice(
      // Function signature only (no guards allowed)
      seq(
        'def',
        $.identifier,
        '(',
        optional($.parameter_list),
        ')',
        optional($.return_type)
      ),
      // Full function definition (default implementation with guards allowed)
      seq(
        'def',
        $.identifier,
        '(',
        optional($.parameter_list),
        ')',
        optional($.return_type),
        optional($.guard_clause),
        $.block
      )
    ),

    // Implementation Block
    impl_block: $ => seq(
      'impl',
      optional($.generic_params),
      $.trait_spec,
      'for',
      $.type_spec,
      optional($.trait_constraints),
      '{',
      repeat($.function_definition),
      '}'
    ),

    trait_spec: $ => seq(
      $.module_path,
      optional($.generic_args)
    ),

    type_spec: $ => seq(
      $.module_path,
      optional($.generic_args)
    ),

    // Function Definition
    function_definition: $ => seq(
      repeat($.attribute),
      choice('def', 'defp'),
      $.identifier,
      '(',
      optional($.parameter_list),
      ')',
      optional($.return_type),
      optional($.guard_clause),
      $.block
    ),

    parameter_list: $ => seq(
      $.parameter,
      repeat(seq(',', $.parameter)),
      optional(',')
    ),

    parameter: $ => seq(
      $.identifier,
      ':',
      $.type_annotation
    ),

    return_type: $ => seq(':', $.type_annotation),

    // Guard System
    guard_expression: $ => choice(
      $.expression,
      $.binary_guard_expression,
      seq('(', $.guard_expression, ')')
    ),

    generic_args: $ => seq(
      '<',
      $.type_annotation,
      repeat(seq(',', $.type_annotation)),
      optional(','),
      '>'
    ),

    // Types
    type_annotation: $ => choice(
      seq($.module_path, optional($.generic_args)),
      $.tuple_type,
      $.function_type,
      'Self'
    ),

    tuple_type: $ => seq(
      '(',
      optional(seq(
        $.type_annotation,
        repeat(seq(',', $.type_annotation)),
        optional(',')
      )),
      ')'
    ),

    module_path: $ => seq(
      $.type_identifier,
      repeat(seq('.', $.type_identifier))
    ),

    // Macro Definition
    anonymous_function: $ => seq(
      'fn',
      '{',
      repeat1($.anonymous_clause),
      '}'
    ),

    anonymous_clause: $ => seq(
      $.anonymous_params,
      optional($.guard_clause),
      '->',
      choice($.expression, $.block)
    ),

    anonymous_params: $ => choice(
      seq($.identifier, ':', $.type_annotation),
      seq('(', optional($.parameter_list), ')')
    ),

    // Function Captures
    expression: $ => $._pipe_expression,

    _pipe_expression: $ => prec.left(1, choice(
      $._logical_or_expression,
      $.pipe_expression
    )),

    _additive_expression: $ => prec.left(10, choice(
      $._multiplicative_expression,
      $.binary_add,
      $.binary_subtract
    )),

    binary_add: $ => prec.left(10, seq($._additive_expression, '+', $._multiplicative_expression)),
    _multiplicative_expression: $ => prec.left(11, choice(
      $._exponentiation_expression,
      $.binary_multiply,
      $.binary_divide,
      $.binary_modulo
    )),

    function_call: $ => prec(1, seq(
      optional(seq($.module_path, '.')),
      $.identifier,
      '(',
      optional($.argument_list),
      ')'
    )),
    primary_expression: $ => choice(
      $.literal,
      $.identifier,
      $.module_path,
      $.function_call,
      $.function_capture,
      seq('(', $.expression, ')'),
      $.if_expression,
      $.case_expression,
      $.anonymous_function,
      $.struct_literal,
      $.list_literal,
      $.tuple_literal,
      $.map_literal,
      $.macro_injection
    ),

    argument_list: $ => seq(
      $.argument,
      repeat(seq(',', $.argument)),
      optional(',')
    ),

    argument: $ => choice(
      $.spread_argument,
      $.named_argument,
      $.shorthand_argument
    ),

    named_argument: $ => seq(
      $.identifier,
      ':',
      $.expression
    ),

    literal: $ => choice(
      $.integer,
      $.float,
      $.string,
      $.multiline_string,
      $.atom,
      $.sigil,
      $.boolean
    ),

    integer: $ => choice(
      /[0-9]+/,                    // Decimal
      /0b[01]+/,                   // Binary
      /0o[0-7]+/,                  // Octal
      /0x[0-9a-fA-F]+/            // Hexadecimal
    ),

    string: $ => seq(
      '"',
      repeat(choice(
        $.interpolation,
        $.escape_sequence,
        $.string_content
      )),
      '"'
    ),

    string_content: $ => token.immediate(/[^"\\#]+/),
    
    boolean: $ => choice('true', 'false'),

    // Collection Literals
    list_literal: $ => seq(
      '[',
      optional(seq(
        $.expression,
        repeat(seq(',', $.expression)),
        optional(',')
      )),
      ']'
    ),

    tuple_literal: $ => choice(
      // Empty tuple
      seq('(', ')'),
      // Single element tuple (requires trailing comma)
      seq('(', $.expression, ',', ')'),
      // Multi-element tuple
      seq(
        '(',
        $.expression,
        repeat1(seq(',', $.expression)),
        optional(','),
        ')'
      )
    ),

    map_literal: $ => seq(
      '{',
      optional(seq(
        $.map_entry,
        repeat(seq(',', $.map_entry)),
        optional(',')
      )),
      '}'
    ),

    map_entry: $ => choice(
      $.map_key_value_pair,
      $.map_shorthand_pair
    ),

    map_shorthand_pair: $ => prec(2, seq(
      choice($.identifier, $.string),
      ':',
      $.expression
    )),

    // Struct Literals
    case_expression: $ => seq(
      'case',
      $.expression,
      '{',
      repeat($.case_clause),
      optional($.else_clause),
      '}'
    ),

    case_clause: $ => seq(
      $.case_pattern,
      '->',
      choice($.expression, $.block)
    ),

    case_pattern: $ => seq('when', $.guard_expression),

    else_clause: $ => seq(
      'else',
      '->',
      choice($.expression, $.block)
    ),

    // Statements
    block: $ => seq('{', repeat($.statement), '}'),

    statement: $ => choice(
      $.expression,
      $.let_binding,
      $.constant_definition
    ),

    // Variable Binding
    let_binding: $ => seq(
      'let',
      choice(
        seq($.identifier, ':', $.type_annotation, '=', $.expression),
        seq($.identifier, '=', $.expression),
        seq($.destructure_pattern, '=', $.expression)
      )
    ),

    destructure_pattern: $ => choice(
      $.tuple_destructure,
      $.struct_destructure,
      $.list_destructure
    ),

    constant_definition: $ => seq(
      repeat($.attribute),
      'const',
      $.type_identifier,
      ':',
      $.type_annotation,
      '=',
      $.expression
    ),

    // Aliases
    attribute: $ => seq(
      '@',
      $.type_identifier,
      optional(seq('(', $.attribute_args, ')'))
    ),

    attribute_args: $ => seq(
      $.argument,
      repeat(seq(',', $.argument)),
      optional(',')
    ),

    // Import Definitions
    identifier: $ => /[a-z_][a-zA-Z0-9_]*\??/,
    type_identifier: $ => /[A-Z][a-zA-Z0-9_]*/
  }
});
