tree-sitter-outrun/test/corpus/anonymous_functions_multiple_clauses.txt
================
Anonymous function with multiple clauses
================

let calculator = fn { 
    x: Integer -> x + 1
    y: String -> y
}

---

(source_file
  (item
    (let_binding
      (identifier)
      (expression
        (primary_expression
          (anonymous_function
            (anonymous_clause
              (anonymous_params
                (identifier)
                (type_annotation
                  (module_path
                    (type_identifier))))
              (expression
                (binary_add
                  (primary_expression
                    (identifier))
                  (primary_expression
                    (literal
                      (integer))))))
            (anonymous_clause
              (anonymous_params
                (identifier)
                (type_annotation
                  (module_path
                    (type_identifier))))
              (expression
                (primary_expression
                  (identifier))))))))))
