tree-sitter-outrun/test/corpus/anonymous_functions_no_params.txt
================
Anonymous function with no parameters
================

let getter = fn { () -> 42 }

---

(source_file
  (item
    (let_binding
      (destructure_pattern
        (identifier))
      (expression
        (primary_expression
          (anonymous_function
            (anonymous_clause
              (anonymous_params)
              (expression
                (primary_expression
                  (literal
                    (integer)))))))))))
