tree-sitter-outrun/test/corpus/application_basic.txt
================
Basic Application trait definition
================

trait Application {
  def start(args: List<String>): Result<(), ApplicationError>
}

---

(source_file
  (item
    (trait_definition
      (type_identifier)
      (trait_function
        (identifier)
        (parameter_list
          (parameter
            (identifier)
            (type_annotation
              (module_path
                (type_identifier))
              (generic_args
                (type_annotation
                  (module_path
                    (type_identifier)))))))
        (return_type
          (type_annotation
            (module_path
              (type_identifier))
            (generic_args
              (type_annotation
                (tuple_type))
              (type_annotation
                (module_path
                  (type_identifier))))))))))
