tree-sitter-outrun/test/corpus/application_with_state.txt
================
Application with configuration
================

struct ConfigApp() {
  def load_config(args: List<String>): AppConfig {
    AppConfig.from_args(args: args)
  }
}

impl Application for ConfigApp {
  def start(args: List<String>): Result<(), ApplicationError> {
    let config = ConfigApp.load_config(args: args)
    Logger.info(message: "Application configured")
    Server.run(config: config)
    Result.ok(value: ())
  }
}

---

(source_file
  (item
    (struct_definition
      (type_identifier)
      (function_definition
        (identifier)
        (parameter_list
          (parameter
            (identifier)
            (type_annotation
              (module_path
                (type_identifier))
              (generic_args
                (type_annotation
                  (module_path
                    (type_identifier)))))))
        (return_type
          (type_annotation
            (module_path
              (type_identifier))))
        (block
          (statement
            (expression
              (primary_expression
                (identifier))
              (function_call_postfix
                (identifier)
                (argument_list
                  (argument
                    (named_argument
                      (identifier)
                      (expression
                        (primary_expression
                          (identifier)))))))))))))
  (item
    (impl_block
      (trait_spec
        (module_path
          (type_identifier)))
      (type_spec
        (module_path
          (type_identifier)))
      (function_definition
        (identifier)
        (parameter_list
          (parameter
            (identifier)
            (type_annotation
              (module_path
                (type_identifier))
              (generic_args
                (type_annotation
                  (module_path
                    (type_identifier)))))))
        (return_type
          (type_annotation
            (module_path
              (type_identifier))
            (generic_args
              (type_annotation
                (tuple_type))
              (type_annotation
                (module_path
                  (type_identifier))))))
        (block
          (statement
            (let_binding
              (destructure_pattern
                (identifier))
              (expression
                (primary_expression
                  (identifier))
                (function_call_postfix
                  (identifier)
                  (argument_list
                    (argument
                      (named_argument
                        (identifier)
                        (expression
                          (primary_expression
                            (identifier))))))))))
          (statement
            (expression
              (primary_expression
                (identifier))
              (function_call_postfix
                (identifier)
                (argument_list
                  (argument
                    (named_argument
                      (identifier)
                      (expression
                        (primary_expression
                          (literal
                            (string
                              (string_content)))))))))))
          (statement
            (expression
              (primary_expression
                (identifier))
              (function_call_postfix
                (identifier)
                (argument_list
                  (argument
                    (named_argument
                      (identifier)
                      (expression
                        (primary_expression
                          (identifier)))))))))
          (statement
            (expression
              (primary_expression
                (identifier))
              (function_call_postfix
                (identifier)
                (argument_list
                  (argument
                    (named_argument
                      (identifier)
                      (expression
                        (primary_expression
                          (tuple_literal))))))))))))))
