tree-sitter-outrun/test/corpus/attributes_basic.txt
================
Basic attribute on struct
================

@Derive(traits: [Debug])
struct User(name: String) {
}

---

(source_file
  (item
    (struct_definition
      (attribute
        (type_identifier)
        (attribute_args
          (argument
            (named_argument
              (identifier)
              (expression
                (primary_expression
                  (list_literal
                    (expression
                      (primary_expression
                        (module_path
                          (type_identifier)))))))))))
      (type_identifier)
      (struct_fields
        (struct_field
          (identifier)
          (type_annotation
            (module_path
              (type_identifier))))))))
