tree-sitter-outrun/test/corpus/attributes_complex_args.txt
================
Attribute with complex arguments
================

@Config(database: {host: "localhost", port: 5432}, retry: true)
struct DatabaseConnection(url: String) {
}

---

(source_file
  (item
    (struct_definition
      (attribute
        (type_identifier)
        (attribute_args
          (argument
            (named_argument
              (identifier)
              (expression
                (primary_expression
                  (map_literal
                    (map_entry
                      (map_shorthand_pair
                        (identifier)
                        (expression
                          (primary_expression
                            (literal
                              (string
                                (string_content)))))))
                    (map_entry
                      (map_shorthand_pair
                        (identifier)
                        (expression
                          (primary_expression
                            (literal
                              (integer)))))))))))
          (argument
            (named_argument
              (identifier)
              (expression
                (primary_expression
                  (literal
                    (boolean))))))))
      (type_identifier)
      (struct_fields
        (struct_field
          (identifier)
          (type_annotation
            (module_path
              (type_identifier))))))))
