tree-sitter-outrun/test/corpus/attributes_function.txt
================
Attribute on function
================

@Deprecated(since: "1.0.0")
def old_function(): String {
    "deprecated"
}

---

(source_file
  (item
    (function_definition
      (attribute
        (type_identifier)
        (attribute_args
          (argument
            (named_argument
              (identifier)
              (expression
                (primary_expression
                  (literal
                    (string
                      (string_content)))))))))
      (identifier)
      (return_type
        (type_annotation
          (module_path
            (type_identifier))))
      (block
        (statement
          (expression
            (primary_expression
              (literal
                (string
                  (string_content))))))))))
