tree-sitter-outrun/test/corpus/attributes_no_args.txt
================
Attribute without arguments
================

@Serializable
struct Config(value: String) {
}

---

(source_file
  (item
    (struct_definition
      (attribute
        (type_identifier))
      (type_identifier)
      (struct_fields
        (struct_field
          (identifier)
          (type_annotation
            (module_path
              (type_identifier))))))))
