tree-sitter-outrun/test/corpus/attributes_trait.txt
================
Attribute on trait
================

@Marker
trait Drawable {
    def draw(self: Self): String
}

---

(source_file
  (item
    (trait_definition
      (attribute
        (type_identifier))
      (type_identifier)
      (trait_function
        (identifier)
        (parameter_list
          (parameter
            (identifier)
            (type_annotation)))
        (return_type
          (type_annotation
            (module_path
              (type_identifier))))))))
