tree-sitter-outrun/test/corpus/basic.txt
================
Simple struct definition
================

struct User(name: String) {
    def greet(self: Self): String {
        "Hello"
    }
}

---

(source_file
  (item
    (struct_definition
      (type_identifier)
      (struct_fields
        (struct_field
          (identifier)
          (type_annotation
            (module_path
              (type_identifier)))))
      (function_definition
        (identifier)
        (parameter_list
          (parameter
            (identifier)
            (type_annotation)))
        (return_type
          (type_annotation
            (module_path
              (type_identifier))))
        (block
          (statement
            (expression
              (primary_expression
                (literal
                  (string
                    (string_content)))))))))))

================
Simple trait definition
================

trait Drawable {
    def draw(self: Self): String
}

---

(source_file
  (item
    (trait_definition
      (type_identifier)
      (trait_function
        (identifier)
        (parameter_list
          (parameter
            (identifier)
            (type_annotation)))
        (return_type
          (type_annotation
            (module_path
              (type_identifier))))))))

================
Simple constant
================

const MAX_SIZE: Integer = 100

---

(source_file
  (item
    (constant_definition
      (type_identifier)
      (type_annotation
        (module_path
          (type_identifier)))
      (expression
        (primary_expression
          (literal
            (integer)))))))

================
Zero integer literal
================

const ZERO: Integer = 0

---

(source_file
  (item
    (constant_definition
      (type_identifier)
      (type_annotation
        (module_path
          (type_identifier)))
      (expression
        (primary_expression
          (literal
            (integer)))))))
