tree-sitter-outrun/test/corpus/collections_lists_nested.txt
================
Nested list literals
================

def nested_lists(): List<List<Integer>> {
    [[1, 2], [3, 4], []]
}

---

(source_file
  (item
    (function_definition
      (identifier)
      (return_type
        (type_annotation
          (module_path
            (type_identifier))
          (generic_args
            (type_annotation
              (module_path
                (type_identifier))
              (generic_args
                (type_annotation
                  (module_path
                    (type_identifier))))))))
      (block
        (statement
          (expression
            (primary_expression
              (list_literal
                (expression
                  (primary_expression
                    (list_literal
                      (expression
                        (primary_expression
                          (literal
                            (integer))))
                      (expression
                        (primary_expression
                          (literal
                            (integer)))))))
                (expression
                  (primary_expression
                    (list_literal
                      (expression
                        (primary_expression
                          (literal
                            (integer))))
                      (expression
                        (primary_expression
                          (literal
                            (integer)))))))
                (expression
                  (primary_expression
                    (list_literal)))))))))))
