tree-sitter-outrun/test/corpus/collections_maps.txt
================
Map literals
================

def user(): Map<String, Integer> {
    {name: "James", age: 35}
}

def empty(): Map<String, String> {
    {}
}

---

(source_file
  (item
    (function_definition
      (identifier)
      (return_type
        (type_annotation
          (module_path
            (type_identifier))
          (generic_args
            (type_annotation
              (module_path
                (type_identifier)))
            (type_annotation
              (module_path
                (type_identifier))))))
      (block
        (statement
          (expression
            (primary_expression
              (map_literal
                (map_entry
                  (map_shorthand_pair
                    (identifier)
                    (expression
                      (primary_expression
                        (literal
                          (string
                            (string_content)))))))
                (map_entry
                  (map_shorthand_pair
                    (identifier)
                    (expression
                      (primary_expression
                        (literal
                          (integer)))))))))))))
  (item
    (function_definition
      (identifier)
      (return_type
        (type_annotation
          (module_path
            (type_identifier))
          (generic_args
            (type_annotation
              (module_path
                (type_identifier)))
            (type_annotation
              (module_path
                (type_identifier))))))
      (block
        (statement
          (expression
            (primary_expression
              (map_literal))))))))
