tree-sitter-outrun/test/corpus/collections_tuples.txt
================
Tuple literals
================

def coordinate(): (Integer, Integer) {
    (42, 24)
}

def single(): (Integer,) {
    (42,)
}

def empty(): () {
    ()
}

---

(source_file
  (item
    (function_definition
      (identifier)
      (return_type
        (type_annotation
          (tuple_type
            (type_annotation
              (module_path
                (type_identifier)))
            (type_annotation
              (module_path
                (type_identifier))))))
      (block
        (statement
          (expression
            (primary_expression
              (tuple_literal
                (expression
                  (primary_expression
                    (literal
                      (integer))))
                (expression
                  (primary_expression
                    (literal
                      (integer)))))))))))
  (item
    (function_definition
      (identifier)
      (return_type
        (type_annotation
          (tuple_type
            (type_annotation
              (module_path
                (type_identifier))))))
      (block
        (statement
          (expression
            (primary_expression
              (tuple_literal
                (expression
                  (primary_expression
                    (literal
                      (integer)))))))))))
  (item
    (function_definition
      (identifier)
      (return_type
        (type_annotation
          (tuple_type)))
      (block
        (statement
          (expression
            (primary_expression
              (tuple_literal))))))))
