tree-sitter-outrun/test/corpus/comments_block.txt
================
Block comment
================

### This is a block comment ###
let x = 5

---

(source_file
  (block_comment)
  (item
    (let_binding
      (destructure_pattern
        (identifier))
      (expression
        (primary_expression
          (literal
            (integer)))))))
