tree-sitter-outrun/test/corpus/comments_inline.txt
================
Inline comment
================

let x = 5 # inline comment

---

(source_file
  (item
    (let_binding
      (identifier)
      (expression
        (primary_expression
          (literal
            (integer))))))
  (comment))
