tree-sitter-outrun/test/corpus/comments_multiple.txt
================
Multiple comments
================

# First comment
### Block comment ###
let x = 5 # inline comment
# Final comment

---

(source_file
  (comment)
  (block_comment)
  (item
    (let_binding
      (identifier)
      (expression
        (primary_expression
          (literal
            (integer))))))
  (comment)
  (comment))
