tree-sitter-outrun/test/corpus/comments_single_line.txt
================
Single line comment
================

# This is a comment
let x = 5

---

(source_file
  (comment)
  (item
    (let_binding
      (identifier)
      (expression
        (primary_expression
          (literal
            (integer)))))))
