tree-sitter-outrun/test/corpus/comments_special_chars.txt
================
Comments with special characters
================

# TODO: implement feature with symbols !@#$%^&*()
### Multi-line block comment with unicode: 🚀 αβγ ###

---

(source_file
  (comment)
  (block_comment))
